fix(accessibility): ♿️ Fix contrast of links
Fixat kontrasten för länkar

--- a/css/samsok.css
+++ b/css/samsok.css
@@ -33,6 +33,13 @@ input.form-control {
     text-transform: none;
 }
 
+.btn-primary:hover,
+.btn-primary:focus {
+    color: black;
+    font-weight: 500;
+    text-transform: none;
+}
+
 header .intro-text {
     padding-top: 300px;
     padding-bottom: 250px;
@@ -94,4 +101,8 @@ section#searchresult {
 .navbar-default .navbar-nav > .active > a:focus {
     color: black;
     background-color: #fec503;
+}
+
+a {
+    color: #3274a9;
 }
